campo de compañia agregado

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       <input type="email" id="email" name="email" required>
     </div>
     <div class="form-group">
+      <label for="compañia">compañia:</label>
+      <input type="text" id="compañia" name="compañia" required>
+    </div>
+    <div class="form-group">
       <label for="cantidad">Cantidad a donar:</label>
       <input type="number" id="cantidad" name="cantidad" required>
     </div>
