Modificacion en la informacion Solicitada

--- a/index.html
+++ b/index.html
@@ -12,23 +12,24 @@
       <input type="text" id="nombre" name="nombre" required>
     </div>
     <div class="form-group">
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
+      <label for="telefono">telefono:</label>
+      <input type="text" id="telefono" name="telefono" required>
     </div>
     <div class="form-group">
-      <label for="compañia">compañia:</label>
-      <input type="text" id="compañia" name="compañia" required>
+      <label for="Email">Email:</label>
+      <input type="text" id="Email" name="Email" required>
     </div>
     <div class="form-group">
-      <label for="cantidad">Cantidad a donar:</label>
-      <input type="number" id="cantidad" name="cantidad" required>
+      <label for="Ciudad">Ciudad:</label>
+      <input type="text" id="Ciudad" name="Ciudad" required>
     </div>
     <div class="form-group">
       <label for="metodo">Método de pago:</label>
       <select id="metodo" name="metodo" required>
-        <option value="paypal">PayPal</option>
-        <option value="tarjeta">Tarjeta de Crédito</option>
-        <option value="transferencia">Transferencia Bancaria</option>
+        <option value="Dinero">Dinero</option>
+        <option value="Alimentos">Alimentos</option>
+        <option value="Ropa">Ropa</option>
+        <option value="Otro">Otro</option>
       </select>
     </div>
     <div class="form-group">
