--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <input type="text" id="Ciudad" name="Ciudad" required>
     </div>
     <div class="form-group">
-      <label for="metodo">Método de pago:</label>
+      <label for="metodo">Que desea donar:</label>
       <select id="metodo" name="metodo" required>
         <option value="Dinero">Dinero</option>
         <option value="Alimentos">Alimentos</option>
