--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <input type="text" id="Ciudad" name="Ciudad" required>
     </div>
     <div class="form-group">
-      <label for="metodo">Método de pago:</label>
-      <select id="metodo" name="metodo" required>
+      <label for="Que desea donar">Que desea donar:</label>
+      <select id="Que desea donar" name="Que desea donar" required>
         <option value="Dinero">Dinero</option>
         <option value="Alimentos">Alimentos</option>
         <option value="Ropa">Ropa</option>
