--- a/index.html
+++ b/index.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Formulario de Donaciones</title>
+  <title>Formulario de Contacto</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
 </head>
+
 <body>
-  <h1>Formulario de Donaciones</h1>
+  <h1>Formulario de Contacto</h1>
+  <img src="wingu.png" class="imagen">
   <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
     <div class="form-group">
       <label for="nombre">Nombre:</label>
-      <input  id="first_name" maxlength="40" name="first_name" size="20" type="text" />
+      <input id="first_name" maxlength="40" name="first_name" size="20" type="text" required />
     </div>
     <div class="form-group">
       <label for="apellido">Apellido:</label>
-      <input  id="last_name" maxlength="80" name="last_name" size="20" type="text" />
+      <input id="last_name" maxlength="80" name="last_name" size="20" type="text" required />
     </div>
     <div class="form-group">
-      <label for="telefono">telefono:</label>
-      <input type="text" id="telefono" name="telefono" required>
+      <label for="compania">Companía:</label>
+      <input id="company" maxlength="40" name="company" size="20" type="text"
+        placeholder="Dejar en blanco si no corresponde" />
+    </div>
+    <div class="form-group">
+      <label for="telefono">Teléfono:</label>
+      <input type="text" id="phone" maxlength="40" name="phone" size="20" type="text" required>
     </div>
     <div class="form-group">
       <label for="Email">Email:</label>
-      <input type="text" id="Email" name="Email" required>
+      <input id="email" maxlength="80" name="email" size="20" type="text" required>
     </div>
     <div class="form-group">
       <label for="Ciudad">Ciudad:</label>
-      <input type="text" id="Ciudad" name="Ciudad" required>
+      <input id="city" maxlength="40" name="city" size="20" type="text" required>
     </div>
     <div class="form-group">
       <label for="Que desea donar">Que desea donar:</label>
@@ -42,13 +50,16 @@
     </div>
   </form>
 </body>
+
 </html>
 
 <html>
+
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
+
 <body>
   <div class="social-icons">
     <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
@@ -59,4 +70,5 @@
     <!-- campos del formulario -->
   </form>
 </body>
+
 </html>
