--- a/index.html
+++ b/index.html
@@ -3,55 +3,53 @@
 <head>
   <title>Formulario de Donaciones</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
-  <h1>Formulario de Donaciones</h1>
-  <form action="procesar.php" method="post">
-    <div class="form-group">
-      <label for="nombre">Nombre:</label>
-      <input type="text" id="nombre" name="nombre" required>
-    </div>
-    <div class="form-group">
-      <label for="telefono">telefono:</label>
-      <input type="text" id="telefono" name="telefono" required>
-    </div>
-    <div class="form-group">
-      <label for="Email">Email:</label>
-      <input type="text" id="Email" name="Email" required>
-    </div>
-    <div class="form-group">
-      <label for="Ciudad">Ciudad:</label>
-      <input type="text" id="Ciudad" name="Ciudad" required>
-    </div>
-    <div class="form-group">
-      <label for="Que desea donar">Que desea donar:</label>
-      <select id="Que desea donar" name="Que desea donar" required>
-        <option value="Dinero">Dinero</option>
-        <option value="Alimentos">Alimentos</option>
-        <option value="Ropa">Ropa</option>
-        <option value="Otro">Otro</option>
-      </select>
-    </div>
-    <div class="form-group">
-      <input type="submit" value="Donar">
-    </div>
-  </form>
-</body>
-</html>
-
-<html>
-<head>
-  <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-  <div class="social-icons">
-    <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-    <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-    <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+  <div class="container">
+    <h1 class="text-center">Formulario de Donaciones</h1>
+    <form action="procesar.php" method="post">
+      <div class="form-group">
+        <label for="nombre" class="font-weight-bold">Nombre:</label>
+        <input type="text" id="nombre" name="nombre" class="form-control" required>
+      </div>
+      <div class="form-group">
+        <label for="telefono" class="font-weight-bold">Telefono:</label>
+        <input type="text" id="telefono" name="telefono" class="form-control" required>
+      </div>
+      <div class="form-group">
+        <label for="Email" class="font-weight-bold">Email:</label>
+        <input type="text" id="Email" name="Email" class="form-control" required>
+      </div>
+      <div class="form-group">
+        <label for="Ciudad" class="font-weight-bold">Ciudad:</label>
+        <input type="text" id="Ciudad" name="Ciudad" class="form-control" required>
+      </div>
+      <div class="form-group">
+        <label for="donacion" class="font-weight-bold">Que desea donar:</label>
+        <select id="donacion" name="donacion" class="form-control" required>
+          <option value="Dinero">Dinero</option>
+          <option value="Alimentos">Alimentos</option>
+          <option value="Ropa">Ropa</option>
+          <option value="Otro">Otro</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <input type="submit" value="Donar" class="btn btn-success btn-block" onclick="openPaymentOptions()">
+      </div>
+
+      <script>
+        function openPaymentOptions() {
+          window.open('https://www.paypal.com/donate?hosted_button_id=VA9NWSZ633SAQ', '_blank');
+        }
+      </script>
+    </form>
+    <div class="social-icons text-center">
+      <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+      <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+      <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+    </div>
   </div>
-  <form action="procesar.php" method="post">
-    <!-- campos del formulario -->
-  </form>
 </body>
 </html>
