Refactor form for responsiveness and styling improvements
- Added Bootstrap classes for responsiveness and improved styling of form elements.
- Implemented the viewport meta tag for proper scaling on various devices.
- Cleaned up CSS file, reducing redundancy and making use of Bootstrap's existing styles.
- Updated HTML file to use an external script file for better separation of concerns.
- Ensured all form elements follow best practices for accessibility.

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
   <title>Formulario de Donaciones</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <h1 class="text-center">Formulario de Donaciones</h1>
+    <h1 class="text-center my-4">Formulario de Donaciones</h1>
     <form action="procesar.php" method="post">
       <div class="form-group">
         <label for="nombre" class="font-weight-bold">Nombre:</label>
@@ -45,11 +46,12 @@
         }
       </script>
     </form>
-    <div class="social-icons text-center">
-      <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-      <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-      <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+    <div class="social-icons text-center my-4">
+      <a href="#" class="social-icon mx-2"><i class="fab fa-facebook-f"></i></a>
+      <a href="#" class="social-icon mx-2"><i class="fab fa-twitter"></i></a>
+      <a href="#" class="social-icon mx-2"><i class="fab fa-instagram"></i></a>
     </div>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
