Formulario 2.0 conexion salesforce

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <h1>Formulario de Contacto</h1>
   <img src="wingu.png" class="imagen">
   <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
+    <input type=hidden name="oid" value="00D8b0000032Ggp"
     <div class="form-group">
       <label for="nombre">Nombre:</label>
       <input id="first_name" maxlength="40" name="first_name" size="20" type="text" required />
