--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>Formulario de Contacto</h1>
   <img src="wingu.png" class="imagen">
   <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
-    <input type=hidden name="oid" value="00D8b0000032Ggp"
+    <input type=hidden name="oid" value="00D8b0000032Ggp" />
     <div class="form-group">
       <label for="nombre">Nombre:</label>
       <input id="first_name" maxlength="40" name="first_name" size="20" type="text" required />
@@ -30,7 +30,7 @@
       <input type="text" id="phone" maxlength="40" name="phone" size="20" type="text" required>
     </div>
     <div class="form-group">
-      <label for="Email">Email:</label>
+      <label for="email">Email:</label>
       <input id="email" maxlength="80" name="email" size="20" type="text" required>
     </div>
     <div class="form-group">
