--- a/public/index.html
+++ b/public/index.html
@@ -1,104 +1,85 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Formulario de Donaciones</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-  </head>
 
-  <body>
-    <div class="container">
-      <h1 class="text-center my-4">Formulario de Donaciones</h1>
-      <form action="procesar.php" method="post">
-        <div class="form-group">
-          <label for="nombre" class="font-weight-bold">Nombre:</label>
-          <input
-            type="text"
-            id="nombre"
-            name="nombre"
-            class="form-control"
-            required
-          />
-        </div>
-        <div class="form-group">
-          <label for="telefono" class="font-weight-bold">Telefono:</label>
-          <input
-            type="text"
-            id="telefono"
-            name="telefono"
-            class="form-control"
-            required
-          />
-        </div>
-        <div class="form-group">
-          <label for="Email" class="font-weight-bold">Email:</label>
-          <input
-            type="text"
-            id="Email"
-            name="Email"
-            class="form-control"
-            required
-          />
-        </div>
-        <div class="form-group">
-          <label for="Ciudad" class="font-weight-bold">Ciudad:</label>
-          <input
-            type="text"
-            id="Ciudad"
-            name="Ciudad"
-            class="form-control"
-            required
-          />
-        </div>
-        <div class="form-group">
-          <label for="donacion" class="font-weight-bold"
-            >Que desea donar:</label
-          >
-          <select id="donacion" name="donacion" class="form-control" required>
-            <option value="Dinero">Dinero</option>
-            <option value="Alimentos">Alimentos</option>
-            <option value="Ropa">Ropa</option>
-            <option value="Otro">Otro</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <input
-            type="submit"
-            value="Donar"
-            class="btn btn-success btn-block"
-            onclick="openPaymentOptions()"
-          />
-        </div>
+<head>
+  <title>Formulario de Donaciones</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link
+    rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    crossorigin="anonymous"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+  />
+  <link rel="stylesheet" type="text/css" href="styles.css" />
+</head>
 
-        <script>
-          function openPaymentOptions() {
-            window.open(
-              "https://www.paypal.com/donate?hosted_button_id=VA9NWSZ633SAQ",
-              "_blank"
-            );
-          }
-        </script>
-      </form>
-      <div class="social-icons text-center my-4">
-        <a href="#" class="social-icon mx-2"
-          ><i class="fab fa-facebook-f"></i
-        ></a>
-        <a href="#" class="social-icon mx-2"><i class="fab fa-twitter"></i></a>
-        <a href="#" class="social-icon mx-2"
-          ><i class="fab fa-instagram"></i
-        ></a>
-      </div>
+<body>
+  <h1>Formulario de Contacto</h1>
+  <img src="wingu.png" class="imagen">
+  <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
+    <input type=hidden name="oid" value="00D8b0000032Ggp" />
+    <div class="form-group">
+      <label for="nombre">Nombre:</label>
+      <input id="first_name" maxlength="40" name="first_name" size="20" type="text" required />
     </div>
-    <script src="script.js"></script>
-  </body>
+    <div class="form-group">
+      <label for="apellido">Apellido:</label>
+      <input id="last_name" maxlength="80" name="last_name" size="20" type="text" required />
+    </div>
+    <div class="form-group">
+      <label for="compania">Companía:</label>
+      <input id="company" maxlength="40" name="company" size="20" type="text"
+        placeholder="Dejar en blanco si no corresponde" />
+    </div>
+    <div class="form-group">
+      <label for="telefono">Teléfono:</label>
+      <input type="text" id="phone" maxlength="40" name="phone" size="20" type="text" required>
+    </div>
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input id="email" maxlength="80" name="email" size="20" type="text" required>
+    </div>
+    <div class="form-group">
+      <label for="Ciudad">Ciudad:</label>
+      <input id="city" maxlength="40" name="city" size="20" type="text" required>
+    </div>
+    <div class="form-group">
+      <label for="Que desea donar">Que desea donar:</label>
+      <select id="Que desea donar" name="Que desea donar" required>
+        <option value="Dinero">Dinero</option>
+        <option value="Alimentos">Alimentos</option>
+        <option value="Ropa">Ropa</option>
+        <option value="Otro">Otro</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <input type="submit" value="Donar">
+    </div>
+  </form>
+</body>
+
+</html>
+
+<html>
+
+<head>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+</head>
+
+<body>
+  <div class="social-icons">
+    <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+    <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+    <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+  </div>
+  <form action="procesar.php" method="post">
+    <!-- campos del formulario -->
+  </form>
+</body>
+
 </html>
