--- a/public/index.html
+++ b/public/index.html
@@ -1,63 +1,108 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Formulario de Contacto</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+    <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
+  </head>
 
-<head>
-  <title>Formulario de Contacto</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
-</head>
+  <body>
+    <h1>Formulario de Contacto</h1>
+    <img src="wingu.png" class="imagen" />
+    <form
+      action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8"
+      method="POST"
+    >
+      <input type="hidden" name="oid" value="00D8b0000032Ggp" />
+      <div class="form-group">
+        <label for="nombre">Nombre:</label>
+        <input
+          id="first_name"
+          maxlength="40"
+          name="first_name"
+          size="20"
+          type="text"
+          required
+        />
+      </div>
+      <div class="form-group">
+        <label for="apellido">Apellido:</label>
+        <input
+          id="last_name"
+          maxlength="80"
+          name="last_name"
+          size="20"
+          type="text"
+          required
+        />
+      </div>
+      <div class="form-group">
+        <label for="compania">Compañía:</label>
+        <input
+          id="company"
+          maxlength="40"
+          name="company"
+          size="20"
+          type="text"
+          placeholder="Dejar en blanco si no corresponde"
+        />
+      </div>
+      <div class="form-group">
+        <label for="telefono">Teléfono:</label>
+        <input
+          type="text"
+          id="phone"
+          maxlength="40"
+          name="phone"
+          size="20"
+          required
+        />
+      </div>
+      <div class="form-group">
+        <label for="email">Email:</label>
+        <input
+          id="email"
+          maxlength="80"
+          name="email"
+          size="20"
+          type="email"
+          required
+        />
+      </div>
+      <div class="form-group">
+        <label for="ciudad">Ciudad:</label>
+        <input
+          id="city"
+          maxlength="40"
+          name="city"
+          size="20"
+          type="text"
+          required
+        />
+      </div>
+      <div class="form-group">
+        <label for="que-desea-donar">Qué desea donar:</label>
+        <select id="que-desea-donar" name="que-desea-donar" required>
+          <option value="Dinero">Dinero</option>
+          <option value="Alimentos">Alimentos</option>
+          <option value="Ropa">Ropa</option>
+          <option value="Otro">Otro</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <input type="submit" value="Donar" />
+      </div>
+    </form>
 
-<body>
-  <h1>Formulario de Contacto</h1>
-  <img src="wingu.png" class="imagen">
-  <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
-    <input type=hidden name="oid" value="00D8b0000032Ggp" />
-    <div class="form-group">
-      <label for="nombre">Nombre:</label>
-      <input id="first_name" maxlength="40" name="first_name" size="20" type="text" required />
+    <div class="social-icons">
+      <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+      <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+      <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
     </div>
-    <div class="form-group">
-      <label for="apellido">Apellido:</label>
-      <input id="last_name" maxlength="80" name="last_name" size="20" type="text" required />
-    </div>
-    <div class="form-group">
-      <label for="compania">Compañía:</label>
-      <input id="company" maxlength="40" name="company" size="20" type="text"
-        placeholder="Dejar en blanco si no corresponde" />
-    </div>
-    <div class="form-group">
-      <label for="telefono">Teléfono:</label>
-      <input type="text" id="phone" maxlength="40" name="phone" size="20" required>
-    </div>
-    <div class="form-group">
-      <label for="email">Email:</label>
-      <input id="email" maxlength="80" name="email" size="20" type="email" required>
-    </div>
-    <div class="form-group">
-      <label for="ciudad">Ciudad:</label>
-      <input id="city" maxlength="40" name="city" size="20" type="text" required>
-    </div>
-    <div class="form-group">
-      <label for="que-desea-donar">Qué desea donar:</label>
-      <select id="que-desea-donar" name="que-desea-donar" required>
-        <option value="Dinero">Dinero</option>
-        <option value="Alimentos">Alimentos</option>
-        <option value="Ropa">Ropa</option>
-        <option value="Otro">Otro</option>
-      </select>
-    </div>
-    <div class="form-group">
-      <input type="submit" value="Donar">
-    </div>
-  </form>
-
-  <div class="social-icons">
-    <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-    <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-    <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-  </div>
-</body>
-
+  </body>
 </html>
