--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="form-group">
       <label for="telefono">Teléfono:</label>
-      <input type="text" id="phone" maxlength="40" name="phone" size="20" type="text" required>
+      <input  id="phone" maxlength="40" name="phone" size="20" type="text" />
     </div>
     <div class="form-group">
       <label for="email">Email:</label>
@@ -39,11 +39,12 @@
     </div>
     <div class="form-group">
       <label for="Que desea donar">Que desea donar:</label>
-      <select id="Que desea donar" name="Que desea donar" required>
+      <select id="00N8b00000Ifjb6" name="00N8b00000Ifjb6" title="Tipo de donación" required>
+        <option value="">Seleccione por favor</option>
+        <option value="Alimento">Alimentos</option>
         <option value="Dinero">Dinero</option>
-        <option value="Alimentos">Alimentos</option>
+        <option value="Otros">Otros</option>
         <option value="Ropa">Ropa</option>
-        <option value="Otro">Otro</option>
       </select>
     </div>
     <div class="form-group">
