Add Pop up with img

--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
   <form action="procesar.php" method="post">
     <!-- campos del formulario -->
   </form>
+
+  <div id="miPopup" class="popup">
+    <div class="background-image"></div>
+    <p class="message">Gracias por su generosa donación<br> 
+      Su apoyo nos ayuda a marcar la diferencia en la vida de aquellos que más lo necesitan.</p>
+      <button onclick="cerrarPopup()">X</button>
+  </div>
+
+  <script src="popUp.js"></script>
 </body>
 
 </html>
