--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <h1>Formulario de Contacto</h1>
+    <h1>Bienvenido a Wingu</h1>
     <img src="wingu.png" class="imagen" />
     <form
       action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8"
