--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <h1>Formulario de Contacto</h1>
   <img src="wingu.png" class="imagen">
   <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
+    <input  type=hidden id="lead_source" name="lead_source" value="Web" />
     <input type=hidden name="oid" value="00D8b0000032Ggp" />
     <div class="form-group">
       <label for="nombre">Nombre:</label>
@@ -39,7 +40,7 @@
     </div>
     <div class="form-group">
       <label for="Que desea donar">Que desea donar:</label>
-      <select id="Que desea donar" name="Que desea donar" required>
+      <select id=id="00N8b00000Ifjb6" name="00N8b00000Ifjb6" title="Tipo de donación" required>
         <option value="Dinero">Dinero</option>
         <option value="Alimentos">Alimentos</option>
         <option value="Ropa">Ropa</option>
