Fix input a org

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <title>Formulario de Contacto</title>
   <link rel="stylesheet" type="text/css" href="styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-  <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
+  <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
 </head>
 
 <body>
   <h1>Formulario de Contacto</h1>
   <img src="wingu.png" class="imagen" />
   <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
-    <input  type=hidden id="lead_source" name="lead_source" value="Web" />
-    <input type="hidden" name="oid" value="00D8b0000032GZK" />
+    <input type=hidden id="lead_source" name="lead_source" value="Web" />
+    <input type=hidden name="oid" value="00D8b0000032Ggp">
     <div class="form-group">
       <label for="nombre">Nombre:</label>
       <input id="first_name" maxlength="40" name="first_name" size="20" type="text" required />
