fix wingu logo route

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="contact-landing">
         <div class="logo-hero">
           <h1>Somos</h1>
-          <img src="../wingu.png" alt="wingu logotype" />
+          <img src="wingu.png" alt="wingu logotype" />
         </div>
         <div class="container">
           <form
